# sydbox-1

./: .gitignore  .mailmap  CREDITS.in  Cargo.toml  Cargo.toml.in  HELPME.h  KERNEL.md  LICENSE-robinhood_hash.txt  LICENSE-seatest.txt  LICENSE-sha1dc.txt  LICENSE.rc  LICENSE.robinhood_hash  LICENSE.sha1dc  LICENSE.sinit  LICENSE.xxHash  MUSIC.md  Makefile.am  README  README-rc-plan9.md  README-rc.md  README-seatest.md  README-sha1dc.md  README.md  README.sha1dc  TODO  TODO.md  autogen.sh  build.rs  cbindgen.toml  configure.ac  unshare
.builds/: arm64-debian-sid.yml  arm64-debian-sid.yml.disabled  pc64-plan9.yml.disabled  x86_64-alpine-edge.yml  x86_64-alpine-edge.yml.disabled  x86_64-archlinux.yml  x86_64-archlinux.yml.disabled  x86_64-fedora-rawhide.yml  x86_64-fedora-rawhide.yml.disabled
bench/: 2021.05.30-paludis-seccomp-open.md  2021.06.13-paludis-seccomp-user-notify.md  TAO  hyperfine-hash-2021-07-13-992611e0.md
bug/: in-place-hyphen.sh  postmortem-20210623-seccomp-bpf-exit-filter.txt
data/: Makefile.am  alip.syd-2  default.syd-2  firefox.syd-1  firefox.syd-2  paludis.syd-1  paludis.syd-2  sydbox.bashrc  sydbox.bashrc.in  sydbox.supp  tao.pl
examples/: skype.syd-1
m4/: syd-seccomp-arch-check.m4  syd-seccomp-arch-define.m4
man/: Makefile.am  bpf.txt  syd-format.xml  syd.xml  sydbox.xml  sydfmt.xml  sysrq.txt
misc/: Makefile.am  bench-hash.sh  bench-pandora.sh  conf-afl.sh  conf-exherbo.sh  conf-gcov.sh  conf-maint.sh  conf-maintainer.sh  conf.sh  conf.sh.psyscall  coverity-submit.sh  find-last-test-pass.sh  hilite.c  passwd-sort.pl  prep-env-clang.sh  prep-env-musl.sh  prep-env.sh
pandora/: Cargo.toml  Makefile.am  build.rs  main.rs
rc/: Makefile.am  exec.c  fns.h  getflags.h  io.c  rcmain.syd  simple.c  unix.c  unix.h
src/: Cargo.toml.in  Makefile.am  acl-queue.c  acl-queue.h  arch.c  arch.h  asyd.h  bsd-compat.h  build.rs  child.rs  config.c  daemon.c  daemon.h  dump.c  dump.h  errno2name.c  errno2name.h  file.c  file.h  filter.c  hex.c  hex.h  kingbee.py  lib.rs  lib.rs.in  macro.h  magic-acl.c  magic-allowlist.c  magic-cmd.c  magic-log.c  magic-match.c  magic-panic.c  magic-restrict.c  magic-sandbox.c  magic-trace.c  magic-whitelist.c  magic.c  mod.rs  pandora.rs  panic.c  (+76 more)
src/lib/: Makefile.am  about.c  caputils.c  check.c  check.h  debug.c  exec.c  extfs.c  file-TEST.c  file.c  fileutils.c  hex.c  ipc.c  libsyd.ld.in  name.c  pidfd.c  proc.c  sha1-TEST.c  sha1.c  state.c  strlcat.c  strlcpy.c  tao.c  tarot.c  time.c  unshare.c  utf8.c  xxhash.c
src/lib/seatest/: .gitignore  README.md  license.txt
src/lib/seatest/src/: seatest.c  seatest.h
src/lib/syd/: syd.h
src/rc/: Make.Linux  Makefile.rc  README.plan9  exec.c  exec.h  io.h  rc.h
src/syd/: Makefile.am  check.c  check.h  confname.h  debug.c  exec.c  fileutils.c  pidfd.c  proc-TEST.c  proc.c  sc_map.c  seatest.h  sha1.c  sha1dc_syd.c  state.c  strlcat.c  syd.h  xxhash.c
src/unshare/src/: caps.rs  child.rs  debug.rs  error.rs  fds.rs  lib.rs  pipe.rs  run.rs  status.rs  stdio.rs
syd/: Makefile.am  about.c  c.h  caputils.c  check.c  check.h  compiler.h  exec.c  extfs.c  file-TEST.c  file.c  fileutils.c  hex.c  hex.h  libsyd.ld.in  macro.h  name.c  pidfd.c  proc-TEST.c  proc.c  sc_map.c  sc_map.h  seatest.c  seatest.h  sha1-TEST.c  sha1.c  sha1dc_sha1.c  sha1dc_sha1.h  sha1dc_syd.c  sha1dc_syd.h  sha1dc_ubc_check.c  state.c  strlcpy.c  syd.h  time.c  unshare.c  utf8.c  xxhash.c
syd/doc/man/man3/: syd_version.3
t/: Makefile.am  README  alloc_stats.pl  sydtest.sh.in  t00-basic.sh  t0002-path-realpath.sh  t0003-core-basic.sh  t0004-core-chdir.sh  t0004-core-exit.sh  t0004-core-seccomp.sh  t0005-core-abort.sh  t0005-core-exit.sh  t0005-net-match.sh  t0005-sock-match.sh  t0006-core-abort.sh  t0006-core-magic.sh  t0006-core-seccomp.sh  t0006-net-sandbox.sh  t0007-core-exec.sh  t0007-core-magic.sh  t0007-core-open-read.sh  t0008-core-exec.sh  t0008-core-open-read.sh  t0009-core-chdir.sh  t0009-core-exec.sh  t0010-core-chdir.sh  t0011-net-sandbox.sh  t0012-exec-sandbox.sh  t0012-net-sandbox.sh  t0013-net-sandbox.sh  t0013-sys-fuzzer.sh  t0014-sys-fuzzer.sh  t02-path-realpath.sh  t04-core-seccomp.sh  t06-core-abort.sh  t07-core-magic.sh  t08-core-open-read.sh  t10-core-chdir.sh  t12-exec-sandbox.sh  t13-net-sandbox.sh  (+3 more)
t/bin-wrappers/: Makefile.am  syd-format.in  syd.in  sydbox.in
t/test-bin/: Makefile.am  errno2name.c  sockmatchtest.c  syd-abort-fork-static.c  syd-abort-fork.c  syd-abort-pthread.c  syd-abort.c  syd-bind-ipv6-port.py  syd-connect-ipv4-0.py  syd-connect-ipv6.py  syd-false-fork-static.c  syd-false-fork.c  syd-false-pthread.c  syd-false-static.c  syd-false.c  syd-fstatat.c  syd-mkdir-p.c  syd-open-static.c  tap.h  test-skel-1.c  threads_execve.c
t/test-data/: Makefile.am  trinity.syd-2
t/valgrind/: Makefile.am  default.supp  valgrind.sh.in
tao/: make.txt  tao.fortune  tao.pl
tao/art/: art-pink-floyd.txt  art-piper.txt  art-see-emily-play.txt
tests/: README  t0001-sydbox.sh  t2002-aclq-path.sh  t3000-fs-chmod.sh  t3001-fs-fchmodat.sh  t3002-fs-chown.sh  t3003-fs-lchown.sh  t3004-fs-fchownat.sh  t3005-fs-open.sh  t3006-fs-openat.sh  t3007-fs-creat.sh  t3008-fs-mkdir.sh  t3009-fs-mkdirat.sh  t3010-fs-mknod.sh  t3011-fs-mknodat.sh  t3012-fs-rmdir.sh  t3013-fs-truncate.sh  t3014-fs-umount.sh  t3015-fs-umount2.sh  t3016-fs-utime.sh  t3017-fs-utimensat.sh  t3018-fs-utimes.sh  t3019-fs-unlink.sh  t3020-fs-unlinkat.sh  t3021-fs-link.sh  t3022-fs-linkat.sh  t3023-fs-rename.sh  t3024-fs-renameat.sh  t3025-fs-symlink.sh  t3026-fs-symlinkat.sh  t3027-fs-mount.sh  test-lib-sydbox.sh
