[package]
name = "pandora_box"
version = "0.6.1"
authors = ["Alï Polatel <alip@exherbo.org>"]
edition = "2018"
description = "Pandora's Box: A helper for SydBox, a seccomp-bpf based application sandbox, to make sandboxing practical"
documentation = "https://sydbox.exherbo.org"
readme = "README"
homepage = "https://pink.exherbo.org"
repository = "https://github.com/sydbox/sydbox-1"
license = "GPL-3.0-or-later"
keywords = ["security", "sandbox", "seccomp", "sydbox", "pinktrace"]
categories = ["command-line-utilities", "config", "development-tools", "development-tools::debugging", "os::linux-apis"]
build = "build.rs"
default-run = "pandora"
include = [
	"**/*.rs",
	"Cargo.toml",
	"data/*.syd-2",
	"data/sydbox.bashrc",
	"logo/sydbox160.png",
	"/ChangeLog",
	"/README",
	"/LICENSE",
	"/TODO",
]

[[bin]]
name = "pandora"
path = "src/pandora.rs"

[dependencies]
libc = "0.2"
nix = "0.20"
chrono = "0.4"
clap = "2.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.2.0"

[build-dependencies]
built = {version = "0.4.4", features=["git2", "chrono"]}

[dev-dependencies]
hyperfine = "1.11.0"

[profile.release]
lto = true
codegen-units = 1

# Includes debug information in release builds. Necessary for profiling. Does not
# slow down the executable.
debug = true

# The default optimization level is 3 for release mode builds.
# 0 means disable optimization and is the default for debug mode buids.
# (Setting opt-level=1 for debug builds is a good way of speeding them up a bit.)
# "s" means optimize for size, "z" reduces size even more.
opt-level = 3
